// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering when 2 friends should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(List)>
      <withHandlers(pure(FriendItem))
        friend={
          Object {
            "id": "abc123",
            "name": "Someone",
          }
        }
        navigate={[Function]}
      />
      <withHandlers(pure(FriendItem))
        friend={
          Object {
            "id": "xyz890",
            "name": "Someone else",
          }
        }
        navigate={[Function]}
      />
    </Styled(List)>
  </Styled(Content)>
  <Styled(ListItem)>
    <Styled(Body)>
      <Styled(Form)>
        <Styled(Item)
          regular={true}
        >
          <Styled(Input)
            autoCapitalize="words"
            onChangeText={[Function]}
            placeholder="Add a new friend"
            value=""
          />
        </Styled(Item)>
      </Styled(Form)>
    </Styled(Body)>
    <Styled(Right)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="add"
        />
      </Styled(Button)>
    </Styled(Right)>
  </Styled(ListItem)>
</Styled(Container)>
`;

exports[`Rendering when no friends should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(List) />
  </Styled(Content)>
  <Styled(ListItem)>
    <Styled(Body)>
      <Styled(Form)>
        <Styled(Item)
          regular={true}
        >
          <Styled(Input)
            autoCapitalize="words"
            onChangeText={[Function]}
            placeholder="Add a new friend"
            value=""
          />
        </Styled(Item)>
      </Styled(Form)>
    </Styled(Body)>
    <Styled(Right)>
      <Styled(Button)
        onPress={[Function]}
      >
        <Styled(Icon)
          name="add"
        />
      </Styled(Button)>
    </Styled(Right)>
  </Styled(ListItem)>
</Styled(Container)>
`;
